postgresql-common (32) unstable; urgency=low

  * debian/postgresql-common.config: Fix stderr redirection when checking for
    installed packages. Closes: #339457
  * pg_createcluster: Add a POD stanza about cluster names and their purpose.
  * Explained why and how to delete the main cluster of the new version before
    upgrading the old main cluster. Closes: #339392

 -- Martin Pitt <mpitt@debian.org>  Wed, 16 Nov 2005 19:12:00 +0100

postgresql-common (31) unstable; urgency=low

  * Completely new test suite rewritten from scratch; the new suite now uses
    perl instead of shell, can be extented more easily, handles changing of
    supported major versions and does more tests.
  * Fix start.conf handling of pg_upgradecluster:
    - Disable automatic startup of old backup cluster in start.conf.
    - Preserve the original start.conf in new cluster.
    - Error out if original cluster is disabled.
  * Add debconf note about upgrading from obsolete version 8.0.
  * debian/control: Add debconf dependency.
  * Disable automatic autovacuum invocation for -contrib-8.1:
    - pg_ctlcluster: Check version before (not after) complaining about a
      missing pg_autovacuum
    - debian/maintscripts-functions: Check version before trying to call
      autovac-{start,stop}
    - Closes: #337925
  * pg_maintenance: Add --cluster option to work only on selected cluster.
  * pg_upgradecluster: Vacuum and analyze the target cluster after upgrade.
    Closes: #338010
  * pg_ctlcluster: Exit with nonzero if cluster is already running.
  * pg_upgradecluster configuration parameter upgrading:
    - When upgrading to 8.1+, disable obsolete 'rendezvous_name' option.
    - When upgrading to 8.0+, rename sort_mem to work_mem.

 -- Martin Pitt <mpitt@debian.org>  Tue, 15 Nov 2005 12:38:48 +0100

postgresql-common (30) unstable; urgency=high

  * Urgency high since this fixes a stupid bug introduced in 29.
  * pg_lsclusters: Add -h/--no-header option to suppress header output.